@@ -26,8 +26,7 @@ maxit.theta = 1, reltol = 1e-5, eps.bino=1e-5, shortlist=FALSE, trace = FALSE, .
   \item{data, subset, na.action}{arguments controlling formula processing
     via \code{\link[stats]{model.frame}}.}
   \item{offset}{optional numeric vector with an a priori known component to be
-    included in the linear predictor of the count model. See below for more
-    information on offsets.}
+    included in the linear predictor of the count model or zero model. See below for an example.}
 \item{standardize}{Logical flag for x variable standardization, prior to
     fitting the model sequence. The coefficients are always returned on
     the original scale. Default is \code{standardize=TRUE}.}
@@ -172,6 +171,12 @@ lambda.count=0, lambda.zero=0, reltol=1e-12)
 summary(fm_zinb3)
 fm_zinb4 <- zerofinfl(art ~ . | ., data = bioChemists, dist = "negbin")
 summary(fm_zinb4)
+### offset
+exposure <- rep(0.5, dim(bioChemists)[1])
+fm_zinb <- zipath(art ~ . +offset(log(exposure))| ., data = bioChemists, family = "poisson", nlambda=10)
+print(coef(fm_zinb))
+print(predict(fm_zinb))
+
 }
 }
 
